--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "axios": "^0.22.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@reduxjs/toolkit": "^1.6.2",
     "bootstrap": "^4.5.0",
+    "google-map-react": "^2.1.10",
+    "gray-matter": "^4.0.2",
+    "iconify": "^1.3.0",
+    "marked": "^2.1.2",
     "next": "^11.1.2",
     "next-images": "^1.4.0",
+    "next-optimized-images": "^2.6.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.0.1",
     "react-circular-progressbar": "^2.0.4",
@@ -17,13 +27,18 @@
     "react-modal-video": "^1.2.3",
     "react-popup": "^0.10.0",
     "react-popupbox": "^2.0.8",
+    "react-redux": "^7.2.5",
     "react-scroll": "^1.8.0",
     "react-visibility-sensor": "^5.1.1",
     "reactjs-percentage-circle": "^1.0.0",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.9.0",
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^11.0.2",
+    "remark-parse": "^8.0.2",
     "swiper": "^6.0.4",
-    "typeface-roboto": "^0.0.75"
+    "typeface-roboto": "^0.0.75",
+    "unified": "^9.0.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -31,6 +46,8 @@
     "start": "next start"
   },
   "devDependencies": {
-    "babel-plugin-react-html-attrs": "^3.0.5"
+    "babel-plugin-react-html-attrs": "^3.0.5",
+    "eslint": "8.1.0",
+    "eslint-config-next": "11.1.2"
   }
 }
